src/output/snapshots/xot__output__pretty__tests__suppressed nested.snap
---
source: src/output/pretty.rs
expression: "<doc><a><b><c/></b></a></doc>"
---
<doc>
  <a><b><c/></b></a>
</doc>

