src/output/snapshots/xot__output__pretty__tests__text.snap
---
source: src/output/pretty.rs
expression: "<doc><a>text</a><a>text 2</a></doc>"
---
<doc>
  <a>text</a>
  <a>text 2</a>
</doc>

